<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="vm.eventtracker.Add_Edit_EventForm">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addEventName"
        android:hint="@string/EventHint"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Month"
        android:layout_marginTop="10dp"
        android:id="@+id/addMonth"
        android:layout_below="@+id/addEventName"
        android:layout_alignLeft="@+id/addEventName"
        android:layout_alignStart="@+id/addEventName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Date"
        android:id="@+id/addDate"
        android:layout_above="@+id/spinnerMonth"
        android:layout_toRightOf="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/spinnerMonth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Year"
        android:id="@+id/addYear"
        android:layout_above="@+id/spinnerMonth"
        android:layout_toRightOf="@+id/spinnerDate"
        android:layout_toEndOf="@+id/spinnerDate" />

    <Spinner
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerMonth"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/addMonth"
        android:layout_alignLeft="@+id/addMonth"
        android:layout_alignStart="@+id/addMonth" />
    <Spinner
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDate"
        android:layout_alignTop="@+id/spinnerMonth"
        android:layout_toRightOf="@+id/spinnerMonth"
        android:layout_toEndOf="@+id/spinnerMonth" />

    <Spinner
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerYear"
        android:layout_alignTop="@+id/spinnerDate"
        android:layout_toRightOf="@+id/spinnerDate"
        android:layout_toEndOf="@+id/spinnerDate" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/StartTimeHint"
        android:id="@+id/addStartTime"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_below="@+id/spinnerMonth"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/addMonth"
        android:layout_alignStart="@+id/addMonth" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/EndTimeHint"
        android:id="@+id/addEndTime"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/addStartTime"
        android:layout_alignRight="@+id/addEventName"
        android:layout_alignEnd="@+id/addEventName"
        android:layout_toRightOf="@+id/addStartTime"
        android:layout_toEndOf="@+id/addStartTime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addAddress"
        android:hint="@string/AddressHint"
        android:layout_below="@+id/addStartTime"
        android:layout_alignLeft="@+id/addStartTime"
        android:layout_alignStart="@+id/addStartTime"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/addEndTime"
        android:layout_alignEnd="@+id/addEndTime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/NotesHint"
        android:id="@+id/addNotes"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_below="@+id/addAddress"
        android:layout_alignLeft="@+id/addAddress"
        android:layout_alignStart="@+id/addAddress"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/addEndTime"
        android:layout_alignEnd="@+id/addEndTime" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/CancelButton"
        android:id="@+id/cancelButton"
        android:layout_below="@+id/addNotes"
        android:layout_alignRight="@+id/addEndTime"
        android:layout_alignEnd="@+id/addEndTime"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/SaveButton"
        android:id="@+id/saveButton"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_toLeftOf="@+id/cancelButton"
        android:layout_toStartOf="@+id/cancelButton" />


</RelativeLayout>
