<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="vm.eventtracker.Detailed_CreatedView">

    <TextView
        android:id="@+id/createdDetailed_EventNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/eventHeader"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_EventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="New Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_LongDescHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/LongDescHeader"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_LongDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="New Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_AddressHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/AddressHeader"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="New Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_BeginShowHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/BeginShowHeader"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_BeginShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="New Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_TimeBeginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/TimeBeginHeader"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createdDetailed_TimeBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="New Text"
        android:textSize="16sp" />


</LinearLayout>
