<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyEvents">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/MyEventsButton"
        android:id="@+id/myEvents2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:theme="@android:style/Widget.ActionBar.TabBar"
        android:visibility="invisible"
        android:nestedScrollingEnabled="false" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/EventsFestivalsButton"
        android:id="@+id/EventFestival"
        android:theme="@android:style/Widget.ActionBar.TabBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="100"
        android:elegantTextHeight="false"
        android:visibility="invisible" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myEventsList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view" />

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/CreateImageButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/myEvents2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/button_plus_green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/CreateButton"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/CreateEventTag"
        android:textSize="12sp"
        android:layout_below="@+id/myEvents2"
        android:layout_toRightOf="@+id/CreateImageButton"
        android:layout_toEndOf="@+id/CreateImageButton" />

         <View style="@style/Divider"
             android:layout_below="@+id/CreateImageButton"
             android:layout_marginTop="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:id="@+id/view" />




</RelativeLayout>
